@@ -83,6 +83,7 @@ int feh_cmp_size(void *file1, void *file2);
 int feh_cmp_format(void *file1, void *file2);
 
 extern gib_list *filelist;
+extern int       filelist_len;
 extern gib_list *current_file;
 
 #endif
